Fix API spec and add missing enpoints for user (#33)
* Fix API spec and add missing enpoints for user

Correct the definition of some schemas that were wrong inside the API
specification file. Add '/user/login' and '/user' endpoints to the
api.yml file.
